--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,14 +3,14 @@
      <%= csrf_meta_tags %>
 <body>
   <section class="video-container-responsive">
-  <video src="https://storage.googleapis.com/coverr-main/mp4/Keep_Running.mp4" autoplay loop playsinline muted></video>
+  <video src="https://player.vimeo.com/external/188551427.hd.mp4?s=3b8e689848de772cc4323a6adab99122892e04f6&amp;profile_id=174&amp;oauth2_token_id=57447761&amp" autoplay loop playsinline muted></video>
   <div class="callout">
   </div>
 </section>
     <div class="cover-image img-responsive">
       <div class="cover-page text-center">
         <div class="hero">
-          <h1 class="hero-title">Dronnie</h1>
+          <h1 class="hero-title">Rock Restaurant</h1>
         </div>
 
       </div>
@@ -23,9 +23,9 @@
         <br>
         <div class="row dhoni-intro">
           <div class="col-md-6">
-            <h2 class="text-center">Welcome to Dronnie</h2>
+            <h2 class="text-center">Welcome to Rock Restaurant</h2>
             <hr class="hr-style">
-            <p class="text-justify"> If you’re thinking about buying a drone, this is a great place to start. Whether you want to buy a camera dron, toy dron, or even hobby-grade racing drone, check out our <strong>product page</strong> for more details!  </li>
+            <p class="text-justify"> Rock Restaurant - it's not only about the food ... At Rock Restaurant, our mission is simple: enhance and educate the palate with the freshest ingredients and flavors, while surprising and exciting each guest with personal care and service. We are committed to uniting fresh, locally grown produce with farm-raised and wild-caught seafood to make the freshest dishes you’ll find anywhere.   </li>
           </div>
           <div class="col-md-6 text-center">
             <img src="http://imagesvc.timeincapp.com/v3/foundry/image/?q=70&w=1440&url=https%3A%2F%2Ftimedotcom.files.wordpress.com%2F2017%2F07%2Finbeeld-hero-01.jpg%3Fquality%3D85" class="img-responsive img-thumbnail dhoni-title-image" alt="Drone in the Sky">
