adding Rock description

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
             <p class="text-justify"> Rock Restaurant - it's not only about the food ... At Rock Restaurant, our mission is simple: enhance and educate the palate with the freshest ingredients and flavors, while surprising and exciting each guest with personal care and service. We are committed to uniting fresh, locally grown produce with farm-raised and wild-caught seafood to make the freshest dishes you’ll find anywhere.   </li>
           </div>
           <div class="col-md-6 text-center">
-            <img src="http://imagesvc.timeincapp.com/v3/foundry/image/?q=70&w=1440&url=https%3A%2F%2Ftimedotcom.files.wordpress.com%2F2017%2F07%2Finbeeld-hero-01.jpg%3Fquality%3D85" class="img-responsive img-thumbnail dhoni-title-image" alt="Drone in the Sky">
+            <img src="http://rocksoft.pl/wp-content/uploads/2018/04/rocksoft_logo.svg" class="img-respnsive img-thumbnail dhoni-title-image" alt="Drone in the Sky">
           </div>
         </div>
 <br>
@@ -40,16 +40,16 @@
 
     <section class="container dhoni-timeline" data-aos="fade-up" data-aos-duration="600" data-aos-easing="ease-in">
       <br>
-      <h2 class="text-center" id="title-mobile">In  our shop you will find</h2>
+      <h2 class="text-center" id="title-mobile">Rock Restaurant</h2>
       <hr class="hr-style">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
           <ul>
-            <li><strong>Quality</strong> -  We promise to give you the best quality product that you deserve. We believe in that so much, that we decided to give you 50 years of guarantee for free!</li>
+            <li><strong>Quality</strong> - the best ingredients!</li>
             <br>
-            <li><strong>Price</strong>  - Depending on your spending habits, you may choose between cheap and more epensive drones. Call us, and we will be happy to answer all your questions!</li>
+            <li><strong>Price</strong>  - it doesn't matter whether you're a businessman or a school teacher. In Rock Cafe you'll always find something affordable! </li>
              <br>
-            <li><strong>Fun</strong> -  Drones will give you tones of fun. If you haven't tried it yet, buy yourself a drone TODAY!</li>
+            <li><strong>Atmosphere</strong> -  Amazing! Just come and see!</li>
               <br>
               <br>
               <br>
