--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,12 +6,12 @@
       <div class="container" data-aos="fade-up" data-aos-duration="600" data-aos-easing="ease-in"> <!-- I again had to add this extra div or container to fix issue I had with AOS library I keep sending me to mid of dhoni-intro, not at the begging -->
         <div class="row dhoni-intro">
           <div class="col-md-6">
-            <h2 class="text-center"> Dronnie</h2>
+            <h2 class="text-center">Rock Cafe</h2>
             <hr class="hr-style">
-            <p class="text-justify">The company Dronnie was established in 2015 by a passionate drone flyer. A simple present gift, soon became my new way of life. 2 years later I have designed my first model, called XYZ 13, that became one of the most popular drones flown in Europe. I am happy to share that passion with you. It doesn't matter if you are 8 or 80. As long as you like drones, this page is for you!</li></p>
+            <p class="text-justify">Rock Restaurant began on April 26th, 2002 in the city of Ustroń. Focusing on the goals of “Quality, Healthy, and Tradition” the company is family operation making each dish in our own kitchens from scratch. Four Sea Restaurant has three generations of family member working together to fulfill the idea “Honor the Customer, Quality Comes First”. Through hard work and dedication, Rock Restaurant began building its brand around the idea of delicious and authentic traditional Silesian food.</li></p>
           </div>
           <div class="col-md-6 text-center">
-            <img src="https://image.ibb.co/iMBtsd/imageedit_1_4558346144.png" class="img-responsive img-thumbnail dhoni-title-image" alt="Drone in the Sky">
+            <img src="http://rocksoft.pl/wp-content/uploads/2018/04/rocksoft_logo.svg" alt="Drone in the Sky">
           </div>
         </div>
         </div>
