fixing heroku issues

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -6,7 +6,7 @@
       <div class="container" data-aos="fade-up" data-aos-duration="600" data-aos-easing="ease-in"> <!-- I again had to add this extra div or container to fix issue I had with AOS library I keep sending me to mid of dhoni-intro, not at the begging -->
         <div class="row dhoni-intro">
           <div class="col-md-6">
-            <h2 class="text-center">Rock Cafe</h2>
+            <h2 class="text-center">Rock Restaurant</h2>
             <hr class="hr-style">
             <p class="text-justify">Rock Restaurant began on April 26th, 2002 in the city of Ustroń. Focusing on the goals of “Quality, Healthy, and Tradition” the company is family operation making each dish in our own kitchens from scratch. Four Sea Restaurant has three generations of family member working together to fulfill the idea “Honor the Customer, Quality Comes First”. Through hard work and dedication, Rock Restaurant began building its brand around the idea of delicious and authentic traditional Silesian food.</li></p>
           </div>
