--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -216,6 +216,7 @@ video {
 
 .fish {
   background-image: url('https://data.whicdn.com/images/183208666/original.gif');
+  background-image: url('https://data.whicdn.com/images/183208666/original.gif');
   width: 400px;
   height: 304px;
   margin-left: -235px;
