--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -2,7 +2,11 @@
 <div id="form">
 
 <div class="fish" id="fish"></div>
+<div class="fish" id="fish2"></div>
 
+
+  <div class="fish" id="fish"></div>
+  <div class="fish" id="fish2"></div>
 
   <%= form_with(url: "/home/thank_you", method: "post", local: true) do |form| %>
     <div class style="color:="row">
